plugins {
    id 'java'
}

compileJava   {
  sourceCompatibility = JavaVersion.VERSION_11
  targetCompatibility = JavaVersion.VERSION_11
}

repositories {
    mavenCentral()
//    maven { url 'https://www.jetbrains.com/intellij-repository/releases' }
}

apply plugin: 'kotlin'

// todo: Rework the utils module to just use com.jetbrains.intellij.platform:core and com.jetbrains.intellij.platform:lang
// so that there's no need to use 'org.jetbrains.intellij' plugin in this module
apply plugin: 'org.jetbrains.intellij'

// Disable all Gradle Tasks for the gradle-intellij-plugin as we only use the plugin for the dependencies
buildPlugin.enabled = false
buildSearchableOptions.enabled = false
downloadRobotServerPlugin.enabled = false
jarSearchableOptions.enabled = false
patchPluginXml.enabled = false
prepareSandbox.enabled = false
prepareTestingSandbox.enabled = false
prepareUiTestingSandbox.enabled = false
publishPlugin.enabled = false
runIde.enabled = false
runIdeForUiTests.enabled = false
runPluginVerifier.enabled = false
signPlugin.enabled = false
verifyPlugin.enabled = false

intellij {
    version = ideaVersion
}

dependencies {
    //compileOnly "com.jetbrains.intellij.platform:core:$intellijPlatformVersion"
    //compileOnly "com.jetbrains.intellij.platform:lang:$intellijPlatformVersion"

    //testImplementation group: 'junit', name: 'junit', version: '4.12'
}

test {
    jvmArgs = [
        '--illegal-access=warn',
        '--add-opens=java.base/jdk.internal.vm=ALL-UNNAMED',
        '--add-opens=java.base/java.io=ALL-UNNAMED',
        '--add-opens=java.desktop/sun.awt=ALL-UNNAMED',
        '--add-opens=java.desktop/java.awt=ALL-UNNAMED',
        '--add-opens=java.desktop/java.awt.event=ALL-UNNAMED'
    ]
}
